Sistemazione grafica sidebar

--- a/styletemplate.css
+++ b/styletemplate.css
@@ -79,12 +79,11 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: #b5d7a8;
 }
 
 #sidebar ul.components {
-    padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+    padding: 20px 10px;
 }
 
 #sidebar ul p {
