--- a/styletemplate.css
+++ b/styletemplate.css
@@ -176,6 +176,10 @@ div.row {
     margin-left: 3px;
 }
 
+.mb-4, .my-4 {
+    margin-bottom: 0rem!important;
+}
+
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
