Insert Image && complete the web sites

--- a/styletemplate.css
+++ b/styletemplate.css
@@ -52,6 +52,11 @@ a:focus {
     margin: 40px 0;
 }
 
+.card-text:last-child {
+    margin-bottom: 0;
+    margin: 5px;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
